[package]
name = "try_v8"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.13", features = ["blocking"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_v8 = "0.72.0"
v8 = "0.55.0"
